apps/ingress-test-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test-2
  labels:
    backstage.io/kubernetes-id: ingress-test-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-test-2
  template:
    metadata:
      labels:
        app: ingress-test-2
        backstage.io/kubernetes-id: ingress-test-2
    spec:
      containers:
        - name: ingress-test-2
          image: chaitanyapandeygspann/ingress-test-2:1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
