apps/ingress-test-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-2
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /ingress-test-2
            pathType: Prefix
            backend:
              service:
                name: ingress-test-2
                port:
                  number: 80
